--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Building your flatpack furniture">
+    <meta name="description" content="Building Galway's flatpack furniture">
     <meta name="author" content="Caitriona Killeen">
 
     <title>Build My Flatpack</title>
@@ -31,7 +31,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">BUILD MY FLATPACK</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Build My Flatpack</a>
         <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
@@ -61,7 +61,7 @@
         <img class="img-fluid mb-5 d-block mx-auto" src="img/profilef.png" alt="">
         <h1 class="text-uppercase mb-0">Build My Flatpack</h1>
         <hr class="hammer-light">
-        <h2 class="font-weight-light mb-0">IKEA, Woodies, Argos and more</h2>
+        <h2 class="font-weight-light mb-0">Assembling flatpack furniture from IKEA, Woodies, Argos and more</h2>
       </div>
     </header>
 
@@ -235,17 +235,21 @@
           <div class="col-md-4 mb-5 mb-lg-0">
             <h4 class="text-uppercase mb-4">Location</h4>
             <p class="lead mb-0">Galway City,
-              <br>Ireland</p>
+              <br>Ireland
+            </p>
           </div>
           <div class="col-md-4 mb-5 mb-lg-0">
-            <h4 class="text-uppercase mb-4">Around the Web</h4>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d38170.84883373765!2d-9.063841736181663!3d53.27738792700186!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sie!4v1547926131579" width="350" height="225" frameborder="0" style="border:0" allowfullscreen></iframe>
+          </div>
+          <div class="col-md-4 mb-5 mb-lg-0">
+            <h4 class="text-uppercase mb-4">Find us on Facebook</h4>
             <ul class="list-inline mb-0">
               <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.facebook.com/buildmyflatpackgalway" target="_blank">
                   <i class="fab fa-fw fa-facebook-f"></i>
                 </a>
               </li>
-              <li class="list-inline-item">
+             <!--  <li class="list-inline-item">
                 <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
                   <i class="fab fa-fw fa-google-plus-g"></i>
                 </a>
@@ -264,13 +268,8 @@
                 <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
                   <i class="fab fa-fw fa-dribbble"></i>
                 </a>
-              </li>
+              </li> -->
             </ul>
-          </div>
-          <div class="col-md-4">
-            <h4 class="text-uppercase mb-4">About Build My Flatpack</h4>
-            <p class="lead mb-0">Freelance is a free to use, open source Bootstrap theme created by
-              <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
           </div>
         </div>
       </div>
@@ -290,7 +289,6 @@
     </div>
 
     <!-- Pricing Modals -->
-
     <!-- Pricing Modal 1 -->
     <div class="pricing-modal mfp-hide" id="pricing-modal-1">
       <div class="pricing-modal-dialog bg-white">
