--- a/index copy.html
+++ b/index copy.html
@@ -41,9 +41,9 @@
             <li class="nav-item mx-0 mx-lg-1">
               <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#services">Services</a>
             </li>
-            <!-- <li class="nav-item mx-0 mx-lg-1">
+            <li class="nav-item mx-0 mx-lg-1">
               <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#pricing">Pricing</a>
-            </li> -->
+            </li>
             <li class="nav-item mx-0 mx-lg-1">
               <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#how-it-works">How it Works</a>
             </li>
@@ -71,14 +71,11 @@
         <h2 class="text-center text-uppercase text-white">Services</h2>
         <hr class="hammer-light-grey mb-5">
         <div class="row">
-          <!-- <div class="col-lg-4 ml-auto">
+          <div class="col-lg-4 ml-auto">
             <p class="lead">I will build your flatpack furniture</p>
           </div>
           <div class="col-lg-4 mr-auto">
             <p class="lead">Just contact me.</p>
-          </div> -->
-          <div class="col-lg-12 text-center">
-            <p class="lead">Coming Soon!</p>
           </div>
         </div>
         <!-- <div class="text-center mt-4">
@@ -95,7 +92,7 @@
       <div class="container">
         <h2 class="text-center text-uppercase text-white">How It Works</h2>
         <hr class="hammer-light mb-5">
-        <!-- <div class="row">
+        <div class="row">
           <div class="col-lg-4 ml-auto">
             <p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
           </div>
@@ -109,14 +106,11 @@
             Download Now!
           </a>
         </div>
-      </div> -->
-          <div class="col-lg-12 text-center">
-            <p class="lead">Coming Soon!</p>
-          </div>
+      </div>
     </section>
 
     <!-- Pricing Grid Section -->
-    <!-- <section class="pricing" id="pricing">
+    <section class="pricing" id="pricing">
       <div class="container">
         <h2 class="text-center text-uppercase text-secondary mb-0">Pricing</h2>
         <hr class="hammer-dark mb-5">
@@ -183,7 +177,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <!-- Contact Section -->
     <section id="contact">
@@ -194,7 +188,7 @@
           <div class="col-lg-8 mx-auto">
             <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
             <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-            <!-- <form name="sentMessage" id="contactForm" novalidate="novalidate">
+            <form name="sentMessage" id="contactForm" novalidate="novalidate">
               <div class="control-group">
                 <div class="form-group floating-label-form-group controls mb-0 pb-2">
                   <label>Name</label>
@@ -228,10 +222,7 @@
               <div class="form-group">
                 <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Send</button>
               </div>
-            </form> -->
-          <div class="col-lg-12 text-center">
-            <p class="lead">Email: <a href="mailto:buildmyflatpackgalway@gmail.com">buildmyflatpackgalway@gmail.com</a></p>
-          </div>
+            </form>
           </div>
         </div>
       </div>
