Added text to sections

--- a/index.html
+++ b/index.html
@@ -71,22 +71,23 @@
         <h2 class="text-center text-uppercase text-white">Services</h2>
         <hr class="hammer-light-grey mb-5">
         <div class="row">
-          <!-- <div class="col-lg-4 ml-auto">
-            <p class="lead">I will build your flatpack furniture</p>
-          </div>
-          <div class="col-lg-4 mr-auto">
-            <p class="lead">Just contact me.</p>
-          </div> -->
-          <div class="col-lg-12 text-center">
-            <p class="lead">Coming Soon!</p>
+          <div class="text-center col-lg-12 ml-auto">
+            <p class="lead">
+              Got some new flatpack furniture but don't have time to assemble it? <br>
+              Always end up missing a screw or having some "spare parts"?? <br><br>
+              No problem! Let buildmyflatpack.ie take care of it for you. <br>
+              With over 7 years' experience in assembling flatpack furniture, you can trust us to get it right. <br>
+              <br>
+              We assemble flatpack furniture from all the major stores including: <br>
+                IKEA <br>
+                Argos <br>
+                Woodies <br>
+                Home Store + More <br>
+              <br> 
+              We operate in the Galway City area, including Oranmore, Moycullen and Barna.
+            </p>
           </div>
         </div>
-        <!-- <div class="text-center mt-4">
-          <a class="btn btn-xl btn-outline-light" href="#">
-            <i class="fas fa-download mr-2"></i>
-            Download Now!
-          </a>
-        </div> -->
       </div>
     </section>
 
@@ -95,24 +96,16 @@
       <div class="container">
         <h2 class="text-center text-uppercase text-white">How It Works</h2>
         <hr class="hammer-light mb-5">
-        <!-- <div class="row">
-          <div class="col-lg-4 ml-auto">
-            <p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
-          </div>
-          <div class="col-lg-4 mr-auto">
-            <p class="lead">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
-          </div>
+        <div class="text-center col-lg-12 ml-auto">
+          <p class="lead">
+            Just drop us an email with details of the products you need assembled, including the product numbers and your location. <br>
+            We'll send you a quote and arrange a time that suits to call round and assemble your furniture, while you sit back and enjoy a cuppa! <br>
+            <br>
+            Prices start from just €15. <br>
+            <br>
+            (Some smaller items can even be assembled offsite and delivered to you.)
+          </p>
         </div>
-        <div class="text-center mt-4">
-          <a class="btn btn-xl btn-outline-light" href="#">
-            <i class="fas fa-download mr-2"></i>
-            Download Now!
-          </a>
-        </div>
-      </div> -->
-          <div class="col-lg-12 text-center">
-            <p class="lead">Coming Soon!</p>
-          </div>
     </section>
 
     <!-- Pricing Grid Section -->
@@ -230,7 +223,11 @@
               </div>
             </form> -->
           <div class="col-lg-12 text-center">
-            <p class="lead">Email: <a href="mailto:buildmyflatpackgalway@gmail.com">buildmyflatpackgalway@gmail.com</a></p>
+            <p class="lead">
+              Email: <a href="mailto:buildmyflatpackgalway@gmail.com">buildmyflatpackgalway@gmail.com</a><br>
+              <br>
+              Please include details of the products you need assembled, including the product numbers and your location.
+            </p>
           </div>
           </div>
         </div>
