Added IKEA disclaimer

--- a/index.html
+++ b/index.html
@@ -226,7 +226,11 @@
             <p class="lead">
               Email: <a href="mailto:buildmyflatpackgalway@gmail.com">buildmyflatpackgalway@gmail.com</a><br>
               <br>
-              Please include details of the products you need assembled, including the product numbers and your location.
+              Please include details of the products you need assembled, including the product numbers and your location.<br>
+              <br>            
+            </p>
+            <p>
+              (We are not affiliated with IKEA or any other furniture suppliers.)
             </p>
           </div>
           </div>
