--- a/index orig.html
+++ b/index orig.html
@@ -43,22 +43,22 @@
           Menu
           <i class="fas fa-bars"></i>
         </button>
-        <!-- <div class="collapse navbar-collapse" id="navbarResponsive">
+        <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item mx-0 mx-lg-1">
               <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#services">Services</a>
-            </li> -->
+            </li>
             <!-- <li class="nav-item mx-0 mx-lg-1">
               <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#pricing">Pricing</a>
             </li> -->
-            <!-- <li class="nav-item mx-0 mx-lg-1">
+            <li class="nav-item mx-0 mx-lg-1">
               <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#how-it-works">How it Works</a>
             </li>
             <li class="nav-item mx-0 mx-lg-1">
               <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact</a>
             </li>
           </ul>
-        </div> -->
+        </div>
       </div>
     </nav>
 
@@ -67,15 +67,13 @@
       <div class="container">
         <img class="img-fluid mb-5 d-block mx-auto" src="img/profilef.png" alt="">
         <h1 class="text-uppercase mb-0">Build My Flatpack</h1>
-        <br>
-        <h2 class="mb-0" style="color:#FFFF32">We're taking a little break, back soon!</h2>
         <hr class="hammer-light">
-        <!--<h2 class="font-weight-light mb-0">Assembling flatpack furniture from IKEA, Woodies, Argos and more</h2>-->
+        <h2 class="font-weight-light mb-0">Assembling flatpack furniture from IKEA, Woodies, Argos and more</h2>
       </div>
     </header>
 
     <!-- Services Section -->
-    <!-- <section class="bg-secondary text-white mb-0" id="services">
+    <section class="bg-secondary text-white mb-0" id="services">
       <div class="container">
         <h2 class="text-center text-uppercase text-white">Services</h2>
         <hr class="hammer-light-grey mb-5">
@@ -98,10 +96,10 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-     <!-- How It Works Section -->
-    <!--<section class="bg-primary text-white mb-0" id="how-it-works">
+    <!-- How It Works Section -->
+    <section class="bg-primary text-white mb-0" id="how-it-works">
       <div class="container">
         <h2 class="text-center text-uppercase text-white">How It Works</h2>
         <hr class="hammer-light mb-5">
@@ -115,7 +113,7 @@
             (Some smaller items can even be assembled offsite and delivered to you.)
           </p>
         </div>
-    </section> -->
+    </section>
 
     <!-- Pricing Grid Section -->
     <!-- <section class="pricing" id="pricing">
@@ -188,12 +186,12 @@
     </section> -->
 
     <!-- Contact Section -->
-    <!--<section id="contact">
+    <section id="contact">
       <div class="container">
         <h2 class="text-center text-uppercase text-secondary mb-0">Contact Me</h2>
         <hr class="hammer-dark mb-5">
-        <div class="row"> 
-          <div class="col-lg-8 mx-auto">-->
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
             <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
             <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
             <!-- <form name="sentMessage" id="contactForm" novalidate="novalidate">
@@ -231,7 +229,7 @@
                 <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Send</button>
               </div>
             </form> -->
-          <!--<div class="col-lg-12 text-center">
+          <div class="col-lg-12 text-center">
             <p class="lead">
               Email: <a href="mailto:buildmyflatpackgalway@gmail.com">buildmyflatpackgalway@gmail.com</a><br>
               <br>
@@ -245,7 +243,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <!-- Footer -->
     <footer class="footer text-center">
@@ -260,14 +258,14 @@
           <div class="col-md-4 mb-5 mb-lg-0">
             <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d38170.84883373765!2d-9.063841736181663!3d53.27738792700186!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sie!4v1547926131579" width="350" height="225" frameborder="0" style="border:0" allowfullscreen></iframe>
           </div>
-          <!--<div class="col-md-4 mb-5 mb-lg-0">
+          <div class="col-md-4 mb-5 mb-lg-0">
             <h4 class="text-uppercase mb-4">Find us on Facebook</h4>
             <ul class="list-inline mb-0">
               <li class="list-inline-item">
                 <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.facebook.com/buildmyflatpackgalway" target="_blank">
                   <i class="fab fa-fw fa-facebook-f"></i>
                 </a>
-              </li> -->
+              </li>
              <!--  <li class="list-inline-item">
                 <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
                   <i class="fab fa-fw fa-google-plus-g"></i>
@@ -288,15 +286,15 @@
                   <i class="fab fa-fw fa-dribbble"></i>
                 </a>
               </li> -->
-            <!-- </ul>
-          </div> -->
+            </ul>
+          </div>
         </div>
       </div>
     </footer>
 
     <div class="copyright py-4 text-center text-white">
       <div class="container">
-        <small>Copyright &copy; Build My Flatpack 2022</small>
+        <small>Copyright &copy; Build My Flatpack 2019</small>
       </div>
     </div>
 
